# Cpp-projects

./: CMakeLists.txt  Decoder.cpp  Decoder.h  Player.cpp  Player.h  main.cpp  readme.md  run_template.sh
chuffman/: CMakeLists.txt  huffman.cpp  readme.md
dtmf/: CMakeLists.txt  Decoder.cpp  Decoder.h  Player.cpp  Player.h  compile_commands.json  main.cpp  readme.md
dtmf/.clangd/index/: Decoder.cpp.B48088072A783898.idx  Decoder.h.1AF910B32A96914E.idx  main.cpp.52A29A4A7F6645D7.idx
dtmf/libs/goertzel/include/: GoertzelFilter.hpp
dtmf/libs/portaudio/: INSTALL_RECEIPT.json
dtmf/libs/portaudio/.brew/: portaudio.rb
dtmf/libs/portaudio/lib/: libportaudiocpp.0.dylib
dtmf/sampler/: CMakeLists.txt  Sampler.cpp  Sampler.h  main.cpp
dtmf/scphone/: scphone.sc
sampler/: CMakeLists.txt  Sampler.cpp  Sampler.h
scphone/: scphone.sc
sounds/: description.txt  instructions.txt
